<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B84343"
    tools:context=".Activities.SignInActivity">

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/signup_custom"
        android:text="SIGN IN"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordReg" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="88dp"
        android:background="@null"
        android:text="Don't have an account? Sign Up"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />

    <EditText
        android:id="@+id/PasswordReg"
        android:layout_width="356dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round"
        android:ems="10"
        android:hint="🔒   Password"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:radius="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailReg" />

    <EditText
        android:id="@+id/EmailReg"
        android:layout_width="356dp"
        android:layout_height="54dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/round"
        android:ems="10"
        android:hint="👤   Username"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:radius="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator1"
        android:layout_width="356dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />

</android.support.constraint.ConstraintLayout>