<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_book_activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    tools:context=".Activities.NewBookActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:layout_marginRight="8dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/newBookToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.NoActionBar">

        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/ivCloseButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle"
            android:src="@drawable/ic_close_white_24dp"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="New Book"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/newBookToolbar"
            app:layout_constraintStart_toEndOf="@+id/ivCloseButton"
            app:layout_constraintTop_toTopOf="@+id/newBookToolbar"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:id="@+id/ivFinishAddButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="@+id/newBookToolbar"
            app:layout_constraintTop_toTopOf="@+id/tvTitle"
            android:src="@drawable/ic_check_white_24dp"
            android:layout_marginRight="8dp" />

        <ImageView
            android:id="@+id/ivAddBookPhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="10dp"
            android:onClick="showPopup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newBookToolbar"
            android:src="@drawable/ic_add_to_photos_grey_24dp"
            tools:onClick="showPopup" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="235dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAddBookPhoto" />

        <ImageView
            android:id="@+id/bDeleteImage"
            android:layout_width="30dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            app:layout_constraintStart_toEndOf="@+id/ivAddBookPhoto"
            app:layout_constraintTop_toTopOf="@+id/ivAddBookPhoto"
            android:src="@drawable/ic_close_dark_red_24dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="New Book Title"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Author"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ISBN"
            android:inputType="text"
            android:textColor="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>